@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.107 2001/03/20 09:14:57 stelian Exp $
+$Id: CHANGES,v 1.108 2001/04/06 10:09:39 stelian Exp $
 
 Changes between versions 0.4b21 and 0.4b22 (released ????????????????)
 ======================================================================
@@ -29,6 +29,9 @@ Changes between versions 0.4b21 and 0.4b22 (released ????????????????)
 5.	Many cleanups (CPP defines, const char warnings, check of
 	ext2fs COMPAT flags, time_t cleanups, added libext2 version
 	in dump usage text) by Andreas Dilger <adilger@turbolinux.com>.
+
+6.	Made --prefix option work in configure. All the install path
+	are now based on the configure parameters.
 
 Changes between versions 0.4b20 and 0.4b21 (released January 13, 2001)
 ======================================================================
